# sudoku-solver

./: Cargo.toml  README.md  pyproject.toml  pyrightconfig.json
boards/complete/: quiz-00.txt  quiz-01.txt  quiz-02.txt  quiz-03.txt  quiz-04.txt  quiz-05.txt  quiz-06.txt  quiz-07.txt  quiz-08.txt  quiz-09.txt  quiz-10.txt  quiz-11.txt  solution-00.txt  solution-01.txt  solution-02.txt  solution-03.txt  solution-04.txt  solution-05.txt  solution-06.txt  solution-07.txt  solution-08.txt  solution-09.txt  solution-10.txt  solution-11.txt
boards/tests/: guess_column.txt  guess_row.txt  guess_square.txt  two_ones_in_a_col.txt  two_ones_in_a_row.txt  two_ones_in_a_square.txt  valid_board.txt
src/: cli.rs  guess.rs  lib.rs  main.rs  utils.rs
tests/: test.rs
tools/: generate_sudoku.py
